test/regexp_facade/invalid/InvalidGlobalMatch.hx
import ruby.Regexp;

class InvalidGlobalMatch {
	static function main():Void {
		Regexp.lastMatch();
	}
}
